COMN-284: first step java17 compatability